fix footer spacing

--- a/css/main.css
+++ b/css/main.css
@@ -42,13 +42,7 @@ header {
 }
 
 .wrapper {
-  position: absolute;
-  bottom: 0;
   width: 100%;
-}
-
-footer {
-  position: relative;
 }
 
 .section {
